<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        style="@style/SettingsHeaderTextView"
        android:text="@string/dialog_title_usury" />

    <EditText
        android:id="@+id/etPrice"
        style="@style/EditTextDialog"
        android:inputType="numberDecimal"
        android:hint="@string/dialog_howmuch" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etWho"
        style="@style/EditTextDialog"
        android:hint="@string/dialog_who" >
    </EditText>

    <CheckedTextView
        android:id="@+id/ctvDirect"
        style="@style/EditTextDialog"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:checked="false"
        android:clickable="true"
        android:hint="@string/dialog_borrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bDialogUsurySave"
            style="@style/ButtonBorderLess"
            android:text="@string/save" />

        <Button
            android:id="@+id/bDialogUsuryCancel"
            style="@style/ButtonBorderLess"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>