<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
     <TextView
            style="@style/SettingsHeaderTextView"
            android:text="@string/dialog_title_newnotsearch" />

        <EditText
            android:id="@+id/etDialogNotWhere"
            style="@style/EditTextDialog"
            android:hint="@string/dialog_where" />

        <CalendarView
            android:id="@+id/cvDialogNotWhen"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <Button
            android:id="@+id/bDialogNewNotConfirm"
            style="@style/CustomButton"
            android:text="@string/confirm" />

</LinearLayout>
