<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <ScrollView
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/ivSetupNewIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_help" />

        <LinearLayout style="@style/SettingsRowLayout" >

            <AutoCompleteTextView
                android:id="@+id/etSetupNewName"
                style="@style/CustomEditText"
                android:hint="@string/setupnew_partyname" />
        </LinearLayout>

        <LinearLayout style="@style/SettingsRowLayout" >

            <EditText
                android:id="@+id/etSetupNewWhere"
                style="@style/CustomEditText"
                android:layout_marginBottom="20dp"
                android:hint="@string/setupnew_partywhere" />
        </LinearLayout>

        <Button
            android:id="@+id/bSetupNew"
            style="@style/CustomButton"
            android:text="@string/createnew" />
    </LinearLayout>

</ScrollView>
    
</RelativeLayout>