<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/customBlack"
    android:orientation="vertical" >
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/customLightBlue"
        android:text="@string/uploadtask_hFilesInQueue" />

    <ProgressBar
        android:id="@+id/pbFilesInQueue"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:max="100"
        android:layout_marginTop="15dp"
        android:progressDrawable="@drawable/progressbar" />
    
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/customLightBlue"
        android:text="@string/uploadtask_hCurrentFile" />

    <ProgressBar
        android:id="@+id/pbUploadingFile"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:max="100"
        android:layout_marginTop="15dp"
        android:progressDrawable="@drawable/progressbar"  />
	
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="10dp">
    
    <TextView
        android:id="@+id/tvUploadTaskStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/customLightBlue"
        android:text="@string/uploadtask_status" />
    
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center">

        <Button
            android:id="@+id/bUploadTaskCancel"
            style="@style/CustomButton"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>
