<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/customBg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/tvLoginStatus"
            style="@style/TextViewStatus" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="5dp" >

                <EditText
                    android:id="@+id/etLogLogin"
                    style="@style/CustomEditText"
                    android:hint="@string/dialog_login" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="5dp" >

                <EditText
                    android:id="@+id/etLogPass"
                    style="@style/CustomEditText"
                    android:hint="@string/dialog_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/bLogLogin"
                style="@style/ButtonBig"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/login" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
